--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "react-spinners": "^0.13.8",
     "react-switch": "^7.0.0",
     "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5",
     "recharts": "^2.12.5",
     "swiper": "^8.3.2",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "universal-cookie": "^7.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
