--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "framer-motion": "^11.2.10",
     "js-cookie": "^3.0.5",
     "rc-drawer": "^4.4.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hot-toast": "^2.4.1",
@@ -70,7 +72,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.4.6",
     "vite": "^5.2.11"
   }
 }
