--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.2.10",
     "js-cookie": "^3.0.5",
     "rc-drawer": "^4.4.2",
